# Desktop

./: CLAUDE.md  Cargo.toml  deny.toml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/fs-ai/src/: lib.rs
crates/fs-app/: Cargo.toml
crates/fs-app/src/: main.rs
crates/fs-bots/src/: accounts_view.rs  app.rs  broadcast_view.rs  gatekeeper_view.rs  lib.rs  model.rs
crates/fs-browser/assets/i18n/: de.toml  en.toml
crates/fs-browser/src/: app.rs  lib.rs
crates/fs-container-app/src/: app.rs  service_list.rs
crates/fs-db-desktop/src/: container_db.rs  desktop.rs  lib.rs  migration.rs  package_registry.rs  shared.rs  store_db.rs
crates/fs-db-desktop/src/entities/: active_theme.rs  audit.rs  setting.rs  shortcut.rs  widget_slot.rs
crates/fs-gui-workspace/: Cargo.toml
crates/fs-gui-workspace/src/: ai_view.rs  app_lifecycle.rs  app_shell.rs  builtin_apps.rs  context_menu.rs  db.rs  desktop.rs  header.rs  help_sidebar.rs  help_view.rs  launcher.rs  lib.rs  main.rs  multiwindow.rs  notification.rs  shell.rs  shell_layout.rs  sidebar.rs  sidebar_state.rs  spinner.rs  split_view.rs  system_info.rs  taskbar.rs  theme_loader.rs  view.rs  wallpaper.rs  web_desktop.rs  widgets.rs  window.rs  window_frame.rs
crates/fs-gui-workspace/tests/: snapshots.rs
crates/fs-managers/: Cargo.toml
crates/fs-managers/src/: language_panel.rs  lib.rs
crates/fs-profile/: Cargo.toml
crates/fs-profile/src/: app.rs  lib.rs  main.rs
crates/fs-settings/: Cargo.toml
crates/fs-settings/assets/i18n/: de.toml  en.toml
crates/fs-settings/src/: accounts.rs  app.rs  appearance.rs  browser_settings.rs  desktop_settings.rs  language.rs  layout_settings.rs  lib.rs  main.rs  package_settings.rs  service_roles.rs  shortcuts.rs  translation_editor.rs
crates/fs-shell/src/: builtin_apps.rs  desktop.rs  help_view.rs  lib.rs  main.rs  sidebar.rs  window.rs  window_frame.rs
crates/fs-showcase/: Cargo.toml
crates/fs-showcase/src/: main.rs
crates/fs-store-app/src/: install_wizard.rs
crates/fsd-ai/src/: lib.rs
crates/fsd-app/: Cargo.toml
crates/fsd-app/src/: main.rs
crates/fsd-bots/: Cargo.toml
crates/fsd-bots/src/: app.rs  broadcast_view.rs  gatekeeper_view.rs  lib.rs  model.rs
crates/fsd-browser/src/: app.rs
crates/fsd-builder/: Cargo.toml
crates/fsd-builder/assets/i18n/: de.toml  en.toml
crates/fsd-builder/src/: app.rs  bridge_builder.rs  container_app_builder.rs  i18n_editor.rs  lib.rs  main.rs  resource_browser.rs
crates/fsd-conductor/: Cargo.toml
crates/fsd-conductor/src/: app.rs  bot_management.rs  dep_graph.rs  lib.rs  log_viewer.rs  resource_view.rs  service_detail.rs  service_list.rs
crates/fsd-conductor/src/bot_management/: form.rs  mod.rs  model.rs
crates/fsd-container-app/: Cargo.toml
crates/fsd-container-app/src/: app.rs  lib.rs  main.rs
crates/fsd-db/: Cargo.toml
crates/fsd-db/src/: conductor_db.rs  container_app_db.rs  desktop.rs  lib.rs  migration.rs  package_registry.rs  shared.rs  store_db.rs
crates/fsd-db/src/entities/: mod.rs
crates/fsd-db/src/schemas/: bus.rs  conductor.rs  core.rs  mod.rs  store.rs
crates/fsd-lenses/src/: app.rs
crates/fsd-managers/: Cargo.toml
crates/fsd-managers/assets/i18n/: de.toml  en.toml
crates/fsd-managers/src/: app.rs  bots_panel.rs  container_app_panel.rs  cursor_panel.rs  icons_panel.rs  language_panel.rs  lib.rs  main.rs  theme_panel.rs
crates/fsd-profile/: Cargo.toml
crates/fsd-profile/src/: app.rs
crates/fsd-settings/: Cargo.toml
crates/fsd-settings/assets/i18n/: de.toml  en.toml
crates/fsd-settings/src/: accounts.rs  app.rs  appearance.rs  desktop_settings.rs  language.rs  lib.rs  repositories.rs  service_roles.rs  shortcuts.rs  translation_editor.rs
crates/fsd-shell/: Cargo.toml
crates/fsd-shell/assets/i18n/: de.toml  en.toml
crates/fsd-shell/src/: app_shell.rs  builtin_apps.rs  context_menu.rs  db.rs  desktop.rs  header.rs  help_view.rs  icons.rs  launcher.rs  lib.rs  multiwindow.rs  notification.rs  sidebar.rs  taskbar.rs  theme_loader.rs  web_desktop.rs  widgets.rs  window.rs  window_frame.rs
crates/fsd-showcase/: Cargo.toml
crates/fsd-showcase/src/: main.rs
crates/fsd-store/: Cargo.toml
crates/fsd-store/assets/i18n/: de.toml  en.toml
crates/fsd-store/src/: app.rs  browser.rs  install_wizard.rs  installed_list.rs  lib.rs  node_package.rs  package_card.rs  package_detail.rs  store_settings.rs
crates/fsd-studio/: Cargo.toml
crates/fsd-studio/src/: app.rs  i18n_editor.rs  lib.rs  module_builder.rs  plugin_builder.rs  resource_browser.rs
crates/fsd-tasks/: Cargo.toml
crates/fsd-tasks/src/: app.rs  pipeline_editor.rs
