[package]
name        = "fs-app"
description = "FreeSynergy Desktop – main launcher (starts the desktop GUI workspace)"
version.workspace   = true
edition.workspace   = true
license.workspace   = true

[[bin]]
name = "fs-desktop"
path = "src/main.rs"

[features]
default = ["iced"]
iced    = ["fs-gui-workspace/iced", "dep:fs-gui-engine-iced"]
bevy    = ["fs-gui-workspace/bevy", "dep:fs-gui-engine-bevy"]

[dependencies]
fs-gui-workspace   = { workspace = true, default-features = false }
fs-gui-engine-iced = { workspace = true, optional = true }
fs-gui-engine-bevy = { workspace = true, optional = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
mimalloc           = { workspace = true }
