[package]
name        = "fs-gui-workspace"
description = "FreeSynergy Desktop shell — header, sidebar, taskbar, window manager"
version.workspace   = true
edition.workspace   = true
license.workspace   = true

[lib]
name = "fs_gui_workspace"
path = "src/lib.rs"

[features]
default = ["iced"]
iced    = ["dep:fs-gui-engine-iced"]
bevy    = ["dep:fs-gui-engine-bevy"]

[dependencies]
fs-gui-engine-iced = { workspace = true, optional = true }
fs-gui-engine-bevy = { workspace = true, optional = true }
fs-render          = { workspace = true }
fs-settings        = { workspace = true }
fs-i18n            = { workspace = true }
fs-theme           = { workspace = true }
fs-session         = { workspace = true }
fs-db-desktop      = { workspace = true }
fs-help            = { workspace = true }
serde              = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
chrono             = { workspace = true }
toml               = { workspace = true }
