[package]
name        = "fs-settings"
description = "FreeSynergy Desktop – Settings: appearance, language, service roles, accounts"
version.workspace   = true
edition.workspace   = true
license.workspace   = true

[lib]
name = "fs_settings"
path = "src/lib.rs"

[[bin]]
name = "fs-settings"
path = "src/main.rs"

[features]
default = ["iced"]
iced    = ["dep:fs-gui-engine-iced"]

[dependencies]
fs-db-desktop        = { workspace = true }
fs-render            = { workspace = true }
fs-browser           = { workspace = true }
fs-store             = { workspace = true }
fs-theme             = { workspace = true }
fs-i18n              = { workspace = true }
fs-pkg               = { workspace = true }
fs-manager-language  = { workspace = true }
fs-gui-engine-iced   = { workspace = true, optional = true }
serde                = { workspace = true }
serde_json           = { workspace = true }
toml                 = { workspace = true }
tracing              = { workspace = true }
