[package]
name        = "fs-showcase"
description = "FreeSynergy Desktop – component gallery (debug builds only)"
version.workspace   = true
edition.workspace   = true
license.workspace   = true

[[bin]]
name = "fs-showcase"
path = "src/main.rs"

[features]
default = ["iced"]
iced    = ["dep:fs-gui-engine-iced"]

[dependencies]
fs-gui-engine-iced = { workspace = true, optional = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
