[package]
name        = "fsd-db"
description = "FreeSynergy.Desktop – SQLite storage (desktop + shared databases)"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
authors.workspace   = true
repository.workspace = true

[dependencies]
sqlx     = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }
thiserror  = { workspace = true }
